@@ -22,7 +22,18 @@ import (
 func newInvalidCRD(apiGroup string) *KNError {
 	parts := strings.Split(apiGroup, ".")
 	name := parts[0]
-	msg := fmt.Sprintf("no Knative %s API found on the backend. Please verify the installation.", name)
-
+	msg := fmt.Sprintf("no Knative %s API found on the backend, please verify the installation", name)
 	return NewKNError(msg)
+}
+
+func newNoRouteToHost(errString string) error {
+	parts := strings.SplitAfter(errString, "dial tcp")
+	if len(parts) == 2 {
+		return NewKNError(fmt.Sprintf("error connecting to the cluster, please verify connection at: %s", strings.Trim(parts[1], " ")))
+	}
+	return NewKNError(fmt.Sprintf("error connecting to the cluster: %s", errString))
+}
+
+func newNoKubeConfig(errString string) error {
+	return NewKNError("no kubeconfig has been provided, please use a valid configuration to connect to the cluster")
 }
